--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 // Disable automatic scroll restoration where possible, the app handles it.
 if ('scrollRestoration' in history) { history.scrollRestoration = 'manual'; }
 
-import { MbFetch } from './js/mbFetch.js';
-
 // Configuration
 
 var mb_site = new URL("https://beta.musicbrainz.org/");
@@ -22,6 +20,8 @@ var mb_oauth_base = new URL("oauth2/", mb_site);
 var mb_oauth_redirect_uri = "https://magicisrc-beta.kepstin.ca/";
 var mb_oauth_client_id = "flI-ayzX2u2pzMWosH27FQ";
 var mb_oauth_client_secret = "sGDt_ttwRSQ7K-hHoZA01A"; // Not so secret after all, are you?
+
+import { MbFetch } from './js/mbFetch.js';
 
 const mbFetch = new MbFetch(mb_ws2_base);
 
@@ -440,6 +440,7 @@ function doLogin() {
     window.location = url;
   });
 }
+window.doLogin = doLogin;
 
 function handleLoginCallback(params) {
   renderLoginProgress();
@@ -556,6 +557,7 @@ function doLogout() {
   window.localStorage.removeItem("mb_login");
   onPopState();
 }
+window.doLogout = doLogout;
 
 function doSubmitMbid() {
   let mbidSubmitBtn = document.getElementById("index-mbid-submit");
@@ -607,6 +609,7 @@ function doSubmitISRCs() {
       renderError("When submitting ISRCs: " + error, error);
     });
 }
+window.doSubmitISRCs = doSubmitISRCs;
 
 function postISRCs() {
   let doc = buildISRCXML();
@@ -690,7 +693,9 @@ function buildISRCXML() {
 
 function handleSubmit(params) {
   var container = document.getElementById("container");
-  container.innerHTML = tmpl("template_submit", {});
+  container.innerHTML = tmpl("template_submit", {
+    login,
+  });
   restoreScrollPosition();
 }
 
