Update privacy policy regarding rate control storage.

--- a/privacy.html
+++ b/privacy.html
@@ -34,7 +34,8 @@
   <p>The following personal data is used by MagicISRC but is stored only in your web browser local storage. This data is never sent to the server hosting MagicISRC or to any third parties other than MusicBrainz:</p>
   <ul>
     <li><b>MusicBrainz login information.</b> This includes your username, an <b>access token</b> for making API requests to submit ISRCs on your behalf, and any personal information on your MusicBrainz user profile that you have made visible to the public.</li>
-    <li><b>Code verifier.</b> As part of the login process, a secret verification code is used to prevent your login credentials from being intercepted.</p>
+    <li><b>Code verifier.</b> As part of the login process, a secret verification code is used to prevent your login credentials from being intercepted.</li>
+    <li><b>API rate control information.</b> Information about when you last accessed the page is stored to allow MagicISRC to abide by the <a href="https://musicbrainz.org/doc/MusicBrainz_API/Rate_Limiting">MusicBrainz API Rate Limiting</a>.</li>
   </ul>
   <h2>Data sent to MusicBrainz</h2>
   <p>When you load a release, log in, or submit ISRCs, some data is sent to MusicBrainz. Please read the <a href="https://metabrainz.org/privacy">MetaBrainz Privacy Policy</a> for details about what they do with this data. The following data may be sent to MusicBrainz:</p>
